--- a/introducing-ember/index.html
+++ b/introducing-ember/index.html
@@ -935,6 +935,17 @@ avril.get("fullName") // "Avril Lavigne"</code></pre>
 				]
 			});
 
+			Reveal.addEventListener( 'slidechanged', function( event ) {
+			    // event.previousSlide, event.currentSlide, event.indexh, event.indexv
+				try{
+					mixpanel.track('slidechanged to slide #' + event.currentSlide);
+				}catch(){
+					console.log('Error tracking', e);
+				}
+
+				_trackEvent('navigation', 'slidechanged', 'slide #', event.currentSlide);
+			} );
+
 		</script>
 
 		<script type="text/javascript">
@@ -950,6 +961,12 @@ avril.get("fullName") // "Avril Lavigne"</code></pre>
 		  })();
 
 		</script>
+
+		<!-- start Mixpanel -->
+		<script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===e.location.protocol?"https:":"http:")+'//cdn.mxpnl.com/libs/mixpanel-2.2.min.js';f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f);b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==
+typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,
+e,d])};b.__SV=1.2}})(document,window.mixpanel||[]);
+mixpanel.init("70a2e950bc43e8bf26115955b7c2da3b");</script><!-- end Mixpanel -->
 
 	</body>
 </html>
